@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX clamav-0.95.1-nls.patch 319 RMD160 403558e6e71e620da2092f80d1d5b450281cb468 SHA1 2ae10843856aa6d7fd9a42e92b8685a6e9e14fbf SHA256 7bba0e938ae577b2b338f1b48f0173a8ec7e3b6785893319fd044d77847d03ba
 AUX clamav-milter.README.gentoo 1124 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b SHA1 0b9b86a0e7732eaaf7f880859265754f7a4efd3a SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11
@@ -11,18 +11,24 @@ AUX clamd.rc 1746 RMD160 0158e536289796660479e0aed28ff002b4054923 SHA1 3edad93b3
 AUX freshclam.conf 64 RMD160 39f5a64cadb0f766605b62a2019303b0ef6b0a36 SHA1 8d112cd09865174b7fc96ff4f415c881eab902e1 SHA256 95b8c1aed21f8eafe911d3c8f21a57b1212f7abeb8de32d29aa3cb9248c17c3b
 AUX freshclam.rc 1070 RMD160 cdd42aa9b9999e3c53e3f28443fb0bdf024c426f SHA1 9fc65761d9d9dbb8565d9abb5e634d73304ceede SHA256 436ddaf181cfb3bc84ad6f7a1858fbb5353ad079405016094b4fc0008b7ce28c
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
-DIST clamav-0.95.2.tar.gz 25137010 RMD160 83cab51c224251316288e4c3189ba91f640e9f82 SHA1 7544b39d84f2233b984a9c2ce3ef74d407add483 SHA256 f5f2a5a9984fd1ade69a7c2cc78da2f5dc0c505f94ab58fb2aa6613399ab1c56
-DIST clamav-0.95.3.tar.gz 26919541 RMD160 c68a2948aa9ab7a3b5f8e9744322d3606ae6df71 SHA1 ab4b1f49d0f24154767d303d6a27b74acf6f4b59 SHA256 003e7a570932fdffbd19fa7a7996274fbfc93f890d26c3066a36eb824c906250
 DIST clamav-0.96.1.tar.gz 40568982 RMD160 f0708b921c8b01a4309fe741ec141ab8cbdf2351 SHA1 cdb24490f402748cbfb57cc87592fe77b470e0a5 SHA256 413dd25907059068da2a367d2b330fbc37d5d2764eb3b047214ce754a9ca74ea
-EBUILD clamav-0.95.2.ebuild 4363 RMD160 e4d089f72a56fd09022bbd794b380def005bab0a SHA1 8a75afedb78cd01fcf3c4598d1ff18e85abd61e7 SHA256 3604c4464785ae13c33e71e41873ba24218de724c89c92c0c0991b669934a345
-EBUILD clamav-0.95.3.ebuild 4500 RMD160 93080f10dfa5c1151a796174291060aaa5654998 SHA1 bbc6054bdd687ff3c97b6a953d279572f6ea8d68 SHA256 96b7069ea3e24cc97101d85ab13edb3310d10d19e31ede60b9e405e103321b23
 EBUILD clamav-0.96.1.ebuild 4482 RMD160 742d2e71ef9343c58f2328b68d208e86e1f26494 SHA1 85eb9dd2d8ab388c467b2704af08b574b6913085 SHA256 7d97469ff105e47cb6f60203e6619f8cfa9f7d66426973658fe2dc2cc4d0792f
-MISC ChangeLog 49046 RMD160 92f4c1775a2c36b0d707b02b4b3cc6798f000e2a SHA1 04221739a3cba3a486da6907a5d098e62ce5eebe SHA256 ab4fc00a4b8ea0218e17e9d09461dc44c0d4a1d394c3eda26be2f50e2ad859b4
+MISC ChangeLog 49241 RMD160 41eee37ade5704500674fe4f963d0790feafdcae SHA1 7d9798f87b1d097b0f1b69bf7e2d87a54bff1615 SHA256 37bef30ba32b375834abb8850474600e42b538a3e8e54c4695f1172a48d83241
 MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkwB7vYACgkQni8M22OVw8ArSgCguddiDoeIoA5IiyRofm6G4vtl
-9pwAnj+SFSYbz3NjyS8w1vba7ntlu5EF
-=GqCS
+iQIcBAEBCAAGBQJNHMEgAAoJEHQ6UuhrqBBQXsAQAJooMitqAW0VRCer7Grww5De
+UHzy9frs9oWgo4PbWagwDCi3WbjC32RRiH9Og0uZ18UGrH7j+sDaTcK4CaSTfCux
+pp5YoTK1fH0JE3LqG4sx9yI+j2TYmorGcT4kZv/wjS04tf5LCwrKsqjLvtXL+Ufk
+60AVyIIYiQ1kCYKlNJemKjsCxLrNdYInXPjGPLtAVQDvNddM9csi5hc89VPQKqAv
+omW6NZLnN2jwviJyrO9VwUtPqNRe1ABOvardP2vFpL58CR/nb/AUfOar2UWMiqdZ
+2vL7F64q7iE+wyoxl/Z5Fneq+2alXhTsnA5GrVL7C96OApCrcy8wU+HJXgg88ClM
+nV4e/WSbd5TlTQGKrWhAn4W37EQCyZP2WvUCcll1eqH5OweWJzbWX02sNkGqEKoM
+p4yCeHiMqvYUZQGa3b/oe+YYlBSbKlA6OEfVaj62Z9FCUoX0lR+wP0AooHHO0hzq
+ggJpZ0Ew6IaQKZ88lyJhA1nEoSzLH066wbHuNDU+mVXMLDrJx3dy/2WdhG8XpTFx
+5riX37fk5UNttSNNkt8ZGnNhT8r+mQXjzpAm3eXy0mRL+87f1LNaGn+QcL3ylMzq
+JWplF9sl4FPwepGQ+zxLfi8B4tHmiErOf6vDeiQMe/V9lgNkxd3X857whIT78nNb
+mOVuKk25b7pe0pM7clt2
+=bs/X
 -----END PGP SIGNATURE-----
