@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $
 
+  30 Dec 2010; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
+  -clamav-0.95.2.ebuild, -clamav-0.95.3.ebuild:
+  Drop clamav-0.95.2 and clamav-0.95.3, following the gentoo-x86 repo.
+
   13 Mar 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> +clamav-0.95.3.ebuild:
   Bump to clamav-0.95.3. Leave 0.95.2 in case if there are regressions.
